[project]
name = "ionet-tools-api"
version = "0.1.0"
description = "ionet backend — server-side network & security tools."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.32",
  "httpx>=0.27",
  "dnspython>=2.7",
  "cryptography>=43",
  "python-whois>=0.9",
  "ipwhois>=1.3",
  "pydantic>=2.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
